@@ -8,6 +8,9 @@ import com.Django.TraceChain.repository.WalletRepository;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -33,6 +36,8 @@ public class EthereumClient implements ChainClient {
 
     private final WalletRepository walletRepository;
     private final TransactionRepository transactionRepository;
+    private final RestTemplate restTemplate = new RestTemplate();
+    private final ObjectMapper objectMapper = new ObjectMapper();
 
     public EthereumClient(WalletRepository walletRepository, TransactionRepository transactionRepository) {
         this.walletRepository = walletRepository;
@@ -46,9 +51,10 @@ public class EthereumClient implements ChainClient {
 
     private Wallet safeFindOrCreateWallet(String address) {
         try {
-            return walletRepository.findById(address).orElseGet(() -> walletRepository.save(new Wallet(address, 2, BigDecimal.ZERO)));
+            return walletRepository.findById(address)
+                    .orElseGet(() -> walletRepository.save(new Wallet(address, 2, BigDecimal.ZERO)));
         } catch (Exception e) {
-            e.printStackTrace();
+            System.out.println("safeFindOrCreateWallet error: " + e.getMessage());
             return null;
         }
     }
@@ -58,19 +64,17 @@ public class EthereumClient implements ChainClient {
     public Wallet findAddress(String address) {
         Optional<Wallet> optionalWallet = walletRepository.findById(address);
         if (optionalWallet.isPresent()) {
-            Wallet wallet = optionalWallet.get();
             System.out.println("존재하는 지갑: " + address);
-            return wallet;
+            return optionalWallet.get();
         }
 
         try {
             String url = apiUrl + "?module=account&action=balance&address=" + address + "&tag=latest&apikey=" + apiKey;
-            RestTemplate restTemplate = new RestTemplate();
             ResponseEntity<String> response = restTemplate.getForEntity(url, String.class);
-
-            JsonNode root = new ObjectMapper().readTree(response.getBody());
+            JsonNode root = objectMapper.readTree(response.getBody());
             String result = root.path("result").asText();
-            BigDecimal balance = new BigDecimal(result).divide(BigDecimal.TEN.pow(18));
+
+            BigDecimal balance = new BigDecimal(result).divide(BigDecimal.TEN.pow(18), 18, RoundingMode.DOWN);
 
             Wallet wallet = safeFindOrCreateWallet(address);
             if (wallet == null) {
@@ -98,83 +102,65 @@ public class EthereumClient implements ChainClient {
         }
     }
 
+    /**
+     * JsonNode 에서 트랜잭션 객체와 transfer 생성 및 연관관계 세팅
+     */
+    private Transaction createTransactionFromJsonNode(JsonNode txNode, Wallet wallet) {
+        String txHash = txNode.path("hash").asText();
+        BigDecimal value = convertToEth(txNode.path("value").asText());
+        long timestamp = txNode.path("timeStamp").asLong();
+        LocalDateTime time = LocalDateTime.ofInstant(Instant.ofEpochSecond(timestamp), ZoneOffset.UTC);
+
+        Transaction tx = new Transaction(txHash, value, time);
+
+        Transfer transfer = new Transfer(
+                tx,
+                txNode.path("from").asText(),
+                txNode.path("to").asText(),
+                value
+        );
+        tx.addTransfer(transfer);
+
+        tx.getWallets().add(wallet);
+        wallet.addTransaction(tx);
+
+        return tx;
+    }
 
     @Override
     @Transactional
     public List<Transaction> getTransactions(String address) {
-        Map<String, Transaction> txMap = new LinkedHashMap<>();
-        try {
-            String url = apiUrl
-                    + "?module=account"
-                    + "&action=txlist"
-                    + "&address=" + address
-                    + "&startblock=0"
-                    + "&endblock=99999999"
-                    + "&sort=asc"
-                    + "&apikey=" + apiKey;
-
-            RestTemplate restTemplate = new RestTemplate();
-            ResponseEntity<String> response = restTemplate.getForEntity(url, String.class);
-            JsonNode result = new ObjectMapper().readTree(response.getBody()).path("result");
-
-            if (!result.isArray()) return new ArrayList<>();
-
-            Wallet wallet = safeFindOrCreateWallet(address);
-
-            for (JsonNode txNode : result) {
-                String txHash = txNode.path("hash").asText();
-                if (txMap.containsKey(txHash)) continue;
-
-                BigDecimal value = convertToEth(txNode.path("value").asText());
-                long timestamp = txNode.path("timeStamp").asLong();
-                LocalDateTime time = LocalDateTime.ofInstant(Instant.ofEpochSecond(timestamp), ZoneOffset.UTC);
-
-                Transaction tx = new Transaction(txHash, value, time);
-                Transfer t = new Transfer(tx,
-                                          txNode.path("from").asText(),
-                                          txNode.path("to").asText(),
-                                          value); // BigDecimal 전달
-                tx.addTransfer(t);
-
-                tx.getWallets().add(wallet);
-                wallet.addTransaction(tx);
-
-                txMap.put(txHash, tx);
-            }
-
-            transactionRepository.saveAll(txMap.values());
-            walletRepository.save(wallet);
-
-        } catch (Exception e) {
-            System.out.println("Ethereum getTransactions error: " + e.getMessage());
-            throw new RuntimeException("Ethereum getTransactions failed", e);
-        }
-
-        return new ArrayList<>(txMap.values());
+        return getTransactions(address, 0); // 0 or any special value means no limit, fetch all
     }
 
-
-    @Override
     @Transactional
     public List<Transaction> getTransactions(String address, int limit) {
+    	int pageSize = limit > 0 ? limit : 10; // limit이 0 이하일 경우 기본값 10
+        List<Transaction> cached = transactionRepository.findByWalletAddress(address, PageRequest.of(0, pageSize)).getContent();
+        if (!cached.isEmpty()) {
+            return cached;
+        }
+
+        // DB에 충분한 데이터가 없으면 API 호출
         Map<String, Transaction> txMap = new LinkedHashMap<>();
         try {
-            String url = apiUrl
-                    + "?module=account"
-                    + "&action=txlist"
-                    + "&address=" + address
-                    + "&startblock=0"
-                    + "&endblock=99999999"
-                    + "&page=1"
-                    + "&offset=" + limit
-                    + "&sort=desc"
-                    + "&apikey=" + apiKey;
+            // API 호출 부분 기존과 동일
+            StringBuilder urlBuilder = new StringBuilder(apiUrl)
+                    .append("?module=account")
+                    .append("&action=txlist")
+                    .append("&address=").append(address)
+                    .append("&startblock=0")
+                    .append("&endblock=99999999")
+                    .append("&sort=").append(limit > 0 ? "desc" : "asc")
+                    .append("&apikey=").append(apiKey);
 
-            RestTemplate restTemplate = new RestTemplate();
-            ResponseEntity<String> response = restTemplate.getForEntity(url, String.class);
-            JsonNode result = new ObjectMapper().readTree(response.getBody()).path("result");
+            if (limit > 0) {
+                urlBuilder.append("&page=1&offset=").append(limit);
+            }
 
-            if (!result.isArray()) return new ArrayList<>();
+            ResponseEntity<String> response = restTemplate.getForEntity(urlBuilder.toString(), String.class);
+            JsonNode result = objectMapper.readTree(response.getBody()).path("result");
+            if (!result.isArray()) return Collections.emptyList();
 
             Wallet wallet = safeFindOrCreateWallet(address);
 
@@ -182,35 +168,19 @@ public class EthereumClient implements ChainClient {
                 String txHash = txNode.path("hash").asText();
                 if (txMap.containsKey(txHash)) continue;
 
-                BigDecimal value = convertToEth(txNode.path("value").asText());
-                long timestamp = txNode.path("timeStamp").asLong();
-                LocalDateTime time = LocalDateTime.ofInstant(Instant.ofEpochSecond(timestamp), ZoneOffset.UTC);
-
-                Transaction tx = new Transaction(txHash, value, time);
-                Transfer t = new Transfer(
-                    tx,
-                    txNode.path("from").asText(),
-                    txNode.path("to").asText(),
-                    value // <-- longValue() 제거, BigDecimal 그대로
-                );
-                tx.addTransfer(t);
-
-                tx.getWallets().add(wallet);
-                wallet.addTransaction(tx);
-
+                Transaction tx = createTransactionFromJsonNode(txNode, wallet);
                 txMap.put(txHash, tx);
             }
 
             transactionRepository.saveAll(txMap.values());
             walletRepository.save(wallet);
+
         } catch (Exception e) {
             System.out.println("Ethereum getTransactions error: " + e.getMessage());
             throw new RuntimeException("Ethereum getTransactions failed", e);
         }
-
         return new ArrayList<>(txMap.values());
     }
-
 
 
     @Override
@@ -222,8 +192,7 @@ public class EthereumClient implements ChainClient {
         Wallet wallet = safeFindOrCreateWallet(address);
         if (wallet == null) return;
 
-        //List<Transaction> transactions = getTransactions(address);
-        List<Transaction> transactions = getTransactions(address,500);
+        List<Transaction> transactions = getTransactions(address, 500);
         if (transactions.isEmpty()) return;
 
         Set<String> existingTxIDs = wallet.getTransactions().stream()
@@ -286,6 +255,7 @@ public class EthereumClient implements ChainClient {
 
         transactionRepository.saveAll(transactions);
         walletRepository.save(wallet);
+
         depthMap.computeIfAbsent(depth, d -> new ArrayList<>()).add(wallet);
 
         Set<String> nextAddresses = new HashSet<>();
@@ -303,8 +273,6 @@ public class EthereumClient implements ChainClient {
         }
     }
 
-
-    // 사례 데이터 쌓을때 시간으로
     private long getBlockNumberByTimestamp(long timestamp) {
         try {
             String url = apiUrl
@@ -314,15 +282,15 @@ public class EthereumClient implements ChainClient {
                     + "&closest=before"
                     + "&apikey=" + apiKey;
 
-            RestTemplate restTemplate = new RestTemplate();
             ResponseEntity<String> response = restTemplate.getForEntity(url, String.class);
-            JsonNode result = new ObjectMapper().readTree(response.getBody()).path("result");
+            JsonNode result = objectMapper.readTree(response.getBody()).path("result");
             return result.asLong();
         } catch (Exception e) {
             System.out.println("getBlockNumberByTimestamp error: " + e.getMessage());
             return 0L;
         }
     }
+
     @Override
     @Transactional
     public List<Transaction> getTransactionsByTimeRange(String address, long startTimestamp, long endTimestamp, int limit) {
@@ -342,11 +310,10 @@ public class EthereumClient implements ChainClient {
                     + "&sort=asc"
                     + "&apikey=" + apiKey;
 
-            RestTemplate restTemplate = new RestTemplate();
             ResponseEntity<String> response = restTemplate.getForEntity(url, String.class);
-            JsonNode result = new ObjectMapper().readTree(response.getBody()).path("result");
+            JsonNode result = objectMapper.readTree(response.getBody()).path("result");
 
-            if (!result.isArray()) return new ArrayList<>();
+            if (!result.isArray()) return Collections.emptyList();
 
             Wallet wallet = safeFindOrCreateWallet(address);
 
@@ -354,15 +321,14 @@ public class EthereumClient implements ChainClient {
                 String txHash = txNode.path("hash").asText();
                 if (txMap.containsKey(txHash)) continue;
 
-                // ✅ ETH 단위로 변환
                 BigDecimal value;
                 String valueStr = txNode.path("value").asText();
                 try {
                     if (valueStr.startsWith("0x")) {
                         value = new BigDecimal(new BigInteger(valueStr.substring(2), 16))
-                                .divide(BigDecimal.TEN.pow(18));
+                                .divide(BigDecimal.TEN.pow(18), 18, RoundingMode.DOWN);
                     } else {
-                        value = new BigDecimal(valueStr).divide(BigDecimal.TEN.pow(18));
+                        value = new BigDecimal(valueStr).divide(BigDecimal.TEN.pow(18), 18, RoundingMode.DOWN);
                     }
                 } catch (Exception ex) {
                     System.out.println("value 변환 오류: " + valueStr);
@@ -373,13 +339,13 @@ public class EthereumClient implements ChainClient {
                 if (timestamp < startTimestamp || timestamp > endTimestamp) continue;
 
                 LocalDateTime time = LocalDateTime.ofInstant(Instant.ofEpochSecond(timestamp), ZoneOffset.UTC);
+
                 Transaction tx = transactionRepository.findById(txHash).orElse(null);
                 if (tx == null) {
                     tx = new Transaction(txHash, value, time);
                     String from = txNode.path("from").asText();
                     String to = txNode.path("to").asText();
 
-                    // ✅ BigDecimal 그대로 사용
                     Transfer t = new Transfer(tx, from, to, value);
                     tx.addTransfer(t);
 
@@ -398,6 +364,7 @@ public class EthereumClient implements ChainClient {
             System.out.println("Ethereum getTransactionsByTimeRange error: " + e.getMessage());
             throw new RuntimeException("Ethereum getTransactionsByTimeRange failed", e);
         }
+
         return new ArrayList<>(txMap.values());
     }
 
@@ -409,17 +376,15 @@ public class EthereumClient implements ChainClient {
 
         List<Transaction> txList = getTransactionsByTimeRange(address, start, end, limit);
 
-        // 시간 필터 (추가 보정용, 혹시 모를 API 오차 대비)
         List<Transaction> filtered = txList.stream()
                 .filter(tx -> {
                     long ts = tx.getTimestamp().toEpochSecond(ZoneOffset.UTC);
                     return ts >= start && ts <= end;
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         if (filtered.isEmpty()) return;
 
-        // 트랜잭션 저장 (중복 저장 방지 포함)
         Wallet wallet = safeFindOrCreateWallet(address);
         Set<String> existingTxIDs = wallet.getTransactions().stream()
                 .map(Transaction::getTxID).collect(Collectors.toSet());
@@ -437,7 +402,6 @@ public class EthereumClient implements ChainClient {
         transactionRepository.saveAll(filtered);
         walletRepository.save(wallet);
 
-        // 재귀 대상 주소 수집
         Set<String> nextAddresses = new HashSet<>();
         for (Transaction tx : filtered) {
             for (Transfer tr : tx.getTransfers()) {
@@ -452,5 +416,4 @@ public class EthereumClient implements ChainClient {
             traceTransactionsByTimeRange(next, depth + 1, maxDepth, start, end, limit, visited);
         }
     }
-
 }
